# OnePaceOrganizer

./: .gitignore  .gitmodules  README.md  data.json  main.py  metadata  pyproject.toml
.github/workflows/: metadata-job.yml  metadata-updater.yml  release.yml  update-submodule.yml
data/: arcs.yml  data.min.json  data.yml  seasons.yml  tvshow.yml
data/episodes/: 0017358A.yml  00768DB7.yml  00EB6532.yml  0144BBBA.yml  01874097.yml  01C40FA1.yml  021A8886.yml  02C6FC2B.yml  04186119.yml  0429451F.yml  0433686D.yml  04C7B716.yml  066FD68B.yml  06BF070D.yml  06F25D1B.yml  0880B38F.yml  088462CB.yml  08B90884.yml  099FB95D.yml  0A2624D5.yml  0AB937B1.yml  0B51015F.yml  0B965026.yml  0C2DBF75.yml  0C5E9A92.yml  0CA47011.yml  0CBF5258.yml  0CF96D5A.yml  0D273612.yml  0D3E2158.yml  0E0C5A82.yml  0E201E28.yml  0E2022E4.yml  0EB7F7E9.yml  0F125E00.yml  0F3017E1.yml  0F8517DC.yml  11DA7BCB.yml  1206A42A.yml  1306F53D.yml  (+459 more)
metadata/: arcs.yml  data.json  data.min.json  data.yml
metadata/episodes/: 05BE81E6.yml  10FA8741.yml  1865E7DF.yml  407B42D5.yml  415455AE.yml  4C39B34C.yml  4E97A31D.yml  84608F51.yml  88019227.yml  919A1140.yml  9D785326.yml  9FC7EE52.yml  A1DFB514.yml  B4925314.yml  C0B845B2.yml  CE6E899D.yml  D3899913.yml  DD135B35.yml  E90342F6.yml  EF447336.yml  F2D99494.yml  F9DE972C.yml  F9F0F488.yml  FCF3D074.yml
misc/: build.ps1  build.sh  icon.icns
pyinstaller/: build.ps1  build.sh
scripts/: build.ps1  build.sh  run.ps1  run.sh
src/: console.py  generator.py  gui.py  headless.py  main.py  organizer.py  store.py  utils.py
src/utils/: csv_to_yaml_generator.py
