[project]
name = "OnePaceOrganizer"
version = "0.2.5"
description = "Renames One Pace files and generates NFO metadata for use with Plex or Jellyfin"
authors = [
    {name = "Isatis",email = "git@isatis.blue"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "prompt-toolkit (>=3.0.51,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "plexapi (>=4.17.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "httpx-retries (>=0.4.0,<0.5.0)",
    "enzyme (>=0.5.2,<0.6.0)",
    "pyside6 (>=6.9.1,<7.0.0)",
    "pyinstaller (>=6.14.2,<7.0.0)",
    "deepdiff (>=8.5.0,<9.0.0)",
    "javaproperties (>=0.8.2,<0.9.0)",
    "rss-parser (>=2.1.1,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
